--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<div>hii</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <div>hii1</div>
+    <div>hii2</div>
+</body>
+</html>
