--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>hii1</div>
-    <div>hii2</div>
+    <div>FIRST PROJECTS</div>
 </body>
 </html>
